增加超链接拼装fmt参数
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@16486 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/templates/webapp_content_base.html
+++ b/weapp/templates/webapp_content_base.html
@@ -60,6 +60,8 @@
         <script type="text/javascript" src="/termite_static/v3/gmu/widget/globalNav.js"></script>
         <script type="text/javascript" src="/termite_static/v3/gmu/widget/returnTop.js"></script>
         <script type="text/javascript" src="/termite_static/v3/gmu/widget/weixinnavbar.js"></script>
+
+        <script type="text/javascript" src="/termite_static/v3/gmu/widget/integralMechanism.js"></script>
         <script type="text/javascript" src="/termite_static/v3/system/api.js"></script>
         <script type="text/javascript" src="/termite_static/v3/system/crypto-js.js"></script>
         <script type="text/javascript" src="/termite_static/v3/system/md5.js"></script>
@@ -77,7 +79,7 @@
         <meta content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0" name="viewport">
         <meta content="telephone=no" name="format-detection">
     </head>
-    <body data-value="{{ cur_request_member.token }}" data-key="fmt" is-under-develop="{{ under_develop }}">
+    <body data-ui-role="integralMechanism" data-value="{{ cur_request_member.token }}" data-key="fmt" is-under-develop="{{ under_develop }}">
         <!-- xt-errMsg for test -->
         <input id="xt-errMsg" type="hidden" value="" />
         
