--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/order_review_list.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/order_review_list.html
@@ -38,7 +38,7 @@
                                 {% elif product.has_review and not product.has_picture %}
                                 <a href="./?woid={{request.webapp_owner_id}}&module=mall&model=product_review_picture&action=update&order_has_product_id={{product.order_has_product_id}}&order_id={{order.id}}&product_id={{product.id}}&product_model_name={{product.order_product_model_name}}" class="xui-reviewBtn xui-review tc fr" data-id="{{order.id}}">追加晒图</a>
                                 {% else %}
-                                <a href="?woid=${owner_id}&module=mall&model=product_review&action=create&order_id=${order_id}&product_id=${product_id}&fmt=${fmt" class="xui-reviewBtn xui-review tc fr" data-id="{{order.id}}">查看评论</a>
+                                <a href="?woid=${owner_id}&module=mall&model=product_review&action=create&order_id=${order_id}&product_id=${product_id}" class="xui-reviewBtn xui-review tc fr" data-id="{{order.id}}">查看评论</a>
                                 {% endif %}
                             </div>
                         </div>
