[update]1、实现 “会员分析-基础数据-手机绑定会员”数据统计 2、“会员分析-基础数据-关注会员”带参数跳转到会员列表页
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@16577 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/member/templates/member/editor/members.html
+++ b/weapp/member/templates/member/editor/members.html
@@ -36,7 +36,8 @@
 			data-enable-sort="false"
 			data-selectable="true"
 			data-item-count-per-page="50"
-			class="panel-body"
+			class="panel-body" 
+			data-args='{"status":"{{status}}"}'
 		></div>
 		<div class="dropdown xui-operation update_dropdown">
 			<div class="pr">
@@ -346,8 +347,17 @@ $(document).ready(function() {
 						friendCount: friend_count,
 						fansCount: fans_count,
 						isReload:true,
-		          	});
+					});
 			});
+
+	var status = '{{status}}';
+	if(status === '1') {
+		_.delay(function(){
+			$('.xa-more-filter').trigger('click');
+			$("#status").val("1");
+		}, 500);
+		
+	}
 });
 </script>
 {% endblock %}
