--- a/weapp/stats/templates/sales/order_summary.html
+++ b/weapp/stats/templates/sales/order_summary.html
@@ -604,7 +604,7 @@
 
 		$('#cod_amount').text("￥" + stats_data.cod_amount.toFixed(2));
 		$('#cod_amount_help').popover({
-			content : "<div class='xui-i-alert'>当前所选时段内使用货到付款方式的订单金额</div>",
+			content : "<div class='xui-i-alert'>当前所选时段内使用货到付款方式的订单支付现金总计</div>",
 			trigger : "hover",
 			html : true,
 			placement : "bottom"
