[update] * 快递接口 第二版
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@16580 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/order_detail.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/order_detail.html
@@ -297,8 +297,10 @@
     {% endif %} -->
 
     {% if under_develop %}
-        <a href="/tools/api/express/test_analog_push_data/?order_id={{order.id}}">测试快递物流</a>
-        <a href="/tools/api/express/test_analog_push_data/?order_id={{order.id}}&is_finish=success">测试快递已收货</a>
+        <a href="/tools/api/express/test_analog_push_data/?order_id={{order.id}}">测试物流v1</a>
+        <a href="/tools/api/express/test_analog_push_data/?order_id={{order.id}}&v=2.0">测试物流v2</a>
+        <a href="/tools/api/express/test_analog_push_data/?order_id={{order.id}}&is_finish=success">测试快递已收货v1</a>
+        <a href="/tools/api/express/test_analog_push_data/?order_id={{order.id}}&v=2.0&is_finish=success">测试快递已收货v2</a>
     {% endif %}
 </div>
 
