[upate] *all bug
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@16676 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/static_v2/js/view/weixin_menu_editor_panel/template.html
+++ b/weapp/static_v2/js/view/weixin_menu_editor_panel/template.html
@@ -1,5 +1,5 @@
 <script id="weixin-menu-eidtor-panel-tmpl-src" type="text/x-jquery-tmpl">
-	<div class="wui-messageEditor pa xa-menu-content" data-id="${index}">
+	<div class="wui-messageEditor pa xa-menu-content xa-menu-content=${index}" data-id="${index}">
 		<div>
 			<div>
 				<ul class="nav nav-tabs">
@@ -41,4 +41,5 @@
 			</div>
 		</div>
 	</div>
+
 </script>
