--- a/weapp/static_v2/js/view/weixin_menu_item/template.html
+++ b/weapp/static_v2/js/view/weixin_menu_item/template.html
@@ -15,6 +15,7 @@
 	</div>
 	<div class="xui-menu-right-item">
 		<div id="edit-message-panel" class="xui-menu-right-item-inner"></div>
+		<div class="xa-no-panel"></div>
 	</div>
 </script>
 
