回滚红包代码
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@16755 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/auth/templates/auth/departments.html
+++ b/weapp/auth/templates/auth/departments.html
@@ -32,10 +32,7 @@
 	</section>
 
 	<section class="xui-departmentUsers xa-departmentUsers">
-		<header class="mb10">
-			<a href="javascript:void(0);" class="btn btn-default xa-createAccount">+ 新建员工</a>
-			<span class="fr mt15 cRed">* 注：子账号需在weapp.weizoom.com网址下登录</span>
-		</header>
+		<header class="mb10"><a href="javascript:void(0);" class="btn btn-default xa-createAccount">+ 新建员工</a></header>
 		<div 
 			data-ui-role="advanced-table" 
 			data-app="auth" 
