--- a/weapp/static_v2/js/view/mall_red_envelop_filter_view/template.html
+++ b/weapp/static_v2/js/view/mall_red_envelop_filter_view/template.html
@@ -30,6 +30,7 @@
                 value=""
                 readonly="readonly"
                 data-enable-select-time="true"
+                data-validate="require-notempty"
                 data-ui-role="date-picker"
                 data-format="yy-mm-dd HH:MM" />
             至
@@ -41,6 +42,7 @@
                 value=""
                 readonly="readonly"
                 data-enable-select-time="true"
+                data-validate="require-notempty"
                 data-ui-role="date-picker"
                 data-format="yy-mm-dd HH:MM"
                 data-min-el="#start_date"/>
