--- a/weapp/static_v2/css/termite_workbench.css
+++ b/weapp/static_v2/css/termite_workbench.css
@@ -956,8 +956,23 @@ button.xui-removeImageButton{
 .xui-propertyView-imgDisplayGroup{
 	width: 378px;
 }
+/*图片导航，橱窗图片提示*/
+/*.xui-propertyView-imageNavGroup .propertyGroup_property_dialogSelectField,
+.xui-propertyView-imgDisplayGroup .propertyGroup_property_dialogSelectField{
+	position: relative;
+}
+.xui-propertyView-imageNavGroup .propertyGroup_property_dialogSelectField .errorHint,
+.xui-propertyView-imgDisplayGroup .propertyGroup_property_dialogSelectField .errorHint{
+	padding-top: 18px;
+}*/
+/*.xui-propertyView-imageNavGroup .propertyGroup_property_dynamicControlField_control .xui-help,
+.xui-propertyView-imgDisplayGroup .propertyGroup_property_dynamicControlField_control .xui-help{
+	position: absolute;
+	width: 140px;
+}*/
 .xui-propertyView-imgDisplayGroup .propertyGroup_property_dynamicControlField_control{
 	width: 416px;
+	/*padding-bottom: 8px;*/
 }
 .xui-propertyView-imgDisplayGroup .errorHint{
 	margin-left: 88px;
@@ -984,9 +999,10 @@ button.xui-removeImageButton{
 .xui-propertyView-imageNavGroup .errorHint,.xui-propertyView-imgAdjGroup .errorHint{
 	margin-left: 88px;
 }
-.xui-propertyView-imageNavGroup .propertyGroup_property_dynamicControlField_control{
+/*.xui-propertyView-imageNavGroup .propertyGroup_property_dynamicControlField_control{
 	height: 162px;
-}
+}*/
+/*添加图片建议尺寸有影响*/
 .xui-propertyView-imageNavGroup .xui-removeImageButton {
 	display: none;
 }
@@ -1037,7 +1053,8 @@ button.xui-removeImageButton{
 	width: 410px;
 }
 .xui-propertyView-imgAdjGroup .xui-selected-title{
-	max-width: 138px;
+	max-width: 130px;
+	/*超过10个字的长度会掉下来*/
 }
 .xui-propertyView-imgAdjGroup .xui-removeImageButton {
 	display: none;
