--- a/weapp/static_v2/js/view/weixin_edit_news_view/template.html
+++ b/weapp/static_v2/js/view/weixin_edit_news_view/template.html
@@ -51,9 +51,9 @@
 
                     <div class="control-group mt5" style="height:330px;">
                         <span class="star_show"></span>
-                        <label class="" for="text">正文</label>
-                        <div class="controls xui-richHtml fr">
-                            <div class="xa-weixin-edit-textAreaBox">
+                        <label class="" for="text">正文<span style="color:#bebebe;margin-left:6px;">(上传图片要求宽度在480-620之间，高度小于等于960)</span></label>
+                        <div class="controls xui-richHtml">
+                            <div class="xa-weixin-edit-textAreaBox" style="margin-left:44px;">
                                 <textarea rows="4" class="input-xlarge" id="text" name="text"
                                     data-validate="require-notempty"
                                     data-force-validate="true"
@@ -64,7 +64,7 @@
                         </div>
                     </div>
 
-                    <div class="control-group mt5 mb100" style="position: relative; left: -15px;">
+                    <div class="control-group mt5 mb100" style="position: relative; left: -15px;top:40px;">
                         <label class="fl" for="summary" style="">链接地址</label>
                         <div class="controls fr" style="width:360px">
                             <div id="urlDiv" class="xa-weixin-edit-urlBox xui-eidt-urlBox">
