--- a/weapp/templates/base_v2.html
+++ b/weapp/templates/base_v2.html
@@ -63,7 +63,7 @@
 		<!-- *start js* [do not modify and delete this line, it will be needed by dist process] -->
 		{% if is_use_dev_resource %}
 		<!-- *start develop js* [do not modify and delete this line, it will be needed by dist process] -->
-			
+
 			<script type="text/javascript" src="/static_v2/lib/jquery/jquery-1.11.2.min.js"></script>
 			<script type="text/javascript" src="/static_v2/lib/jquery/jquery-migrate-1.2.1.js"></script>
 			<script type="text/javascript" src="/static_v2/lib/jquery.tmpl.min.js"></script>
@@ -127,7 +127,7 @@
 		{{ handlebar_component_template|safe }}
 		</script>
 		<!-- handlebar component end -->
-		
+
 		<script type="text/javascript" src="/resource_js/"></script>
 		{% block base_js %}{% endblock %}
 		<div class="wui-rightNav">
@@ -135,7 +135,7 @@
 			<a title="粉丝沟通" href="http://weibo.weizoom.com/?token={{token}}"></a>
 			<a title="微信沟通" href="/new_weixin/outline/"></a>
 			<a title="微商城" href="/mall/outline/get/"></a>
-			<a title="实时消息" href="/new_weixin/realtime_messages/">
+			<a title="未读消息" href="/new_weixin/realtime_messages/?status=0">
 				<span class="xa-num-unread-message-count xui-noticyNum"></span>
 			</a>
 		</div>
@@ -145,7 +145,7 @@
 	(function() {
 	var hm = document.createElement("script");
 	hm.src = "//hm.baidu.com/hm.js?ee18872310bbb14797f87c9eda185a85";
-	var s = document.getElementsByTagName("script")[0]; 
+	var s = document.getElementsByTagName("script")[0];
 	s.parentNode.insertBefore(hm, s);
 	})();
 	</script>
