--- a/weapp/termite/static/termite_js/app/component/wepage/componentadder/componentadder.html
+++ b/weapp/termite/static/termite_js/app/component/wepage/componentadder/componentadder.html
@@ -11,7 +11,7 @@
 	    id="{{component.model.id}}" 
 	    class="{{component.model.class}} wui-componentadder wa-componentadder {% if component.parent_component.sub_component_count > 1 %}xui-hide{% endif %}" 
 	>
-	    +新加模块
+	    +添加模块
 	</div>
 	{% endif %}
 {% endifequal %}
