--- a/weapp/termite/static/termite_js/app/component/wepage/richtext/richtext.html
+++ b/weapp/termite/static/termite_js/app/component/wepage/richtext/richtext.html
@@ -25,7 +25,7 @@
         </div>
         <div class="">
             <p>
-                3. 您可以在这里添加图片。
+                3. 您可以在这里添加图片，建议图片最大宽度480px - 600px之间，最大高度960px
             </p>
         </div>
     </div>
