--- a/weapp/member/templates/member/editor/members.html
+++ b/weapp/member/templates/member/editor/members.html
@@ -206,11 +206,15 @@ $(document).ready(function() {
 	view.$el.bind('end_click', function(){
 		DATA_INTERVAL = '';
 	});
+	//console.log('----------a:::',view.getFilterValue(),'--aaaaaa')
+	
 	// 修改等级
 	$('body').delegate('.xa-update-grade', 'click', function(event){
 		var $el = $(event.currentTarget);
 		var member_id = $el.attr('data-id');
-
+		var dataView = $('[data-ui-role="advanced-table"]').data('view')
+		dataView.setPage(1);
+		dataView.args = view.getFilterValue();
 		var memberTagsUpdateView = W.getMemberTagsUpdateView({
 			width: 260,
 			title: '修改等级',
@@ -218,19 +222,24 @@ $(document).ready(function() {
 			isTitle: false,
 			privateContainerClass:'xui-updateGradeOrTagBox'
 		});
+
 		memberTagsUpdateView.show({
 			$action: $el,
 			isUpdateGrade: true,
 			memberId: member_id,
-			isPostData: true
+			isPostData: true,
+			dataView:dataView
 		})
         memberTagsUpdateView.render();
+
 	});
 	// 修改分组
 	$('body').delegate('.xa-update-tag', 'click', function(event){
 		var $el = $(event.currentTarget);
 		var member_id = $el.attr('data-id');
-
+		var dataView = $('[data-ui-role="advanced-table"]').data('view')
+		dataView.setPage(1);
+		dataView.args = view.getFilterValue();
 		var memberTagsUpdateView = W.getMemberTagsUpdateView({
 			width: 260,
 			title: '修改分组',
@@ -242,7 +251,9 @@ $(document).ready(function() {
 			$action: $el,
 			isUpdateGrade: false,
 			memberId: member_id,
-			isPostData: true
+			isPostData: true,
+			dataView:dataView
+
 		})
         memberTagsUpdateView.render();
 	});
@@ -255,6 +266,9 @@ $(document).ready(function() {
     		console.log($(this).parent().parent().attr('data-id'))
     		post_ids.push($(this).parent().parent().attr('data-id'))
   			});
+	 	var dataView = $('[data-ui-role="advanced-table"]').data('view')
+		dataView.setPage(1);
+		dataView.args = view.getFilterValue();
 	 	if (grade_id && post_ids.length > 0) {
 	 		W.getApi().call({
 	            method: 'post',
@@ -262,7 +276,8 @@ $(document).ready(function() {
 	            api: 'grade/batch_update',
 	            args:{ids:post_ids.join('-'), grade_id:grade_id},
 	            success: function(data) {
-	                 window.location.reload();
+	                 //window.location.reload();
+	                 dataView.reload();
 	            },
 	            error: function(response) {
 	                W.getErrorHintView().show('加载失败！请刷新页面重试！');
@@ -279,6 +294,9 @@ $(document).ready(function() {
     		console.log($(this).parent().parent().attr('data-id'))
     		post_ids.push($(this).parent().parent().attr('data-id'))
   			});
+	 	var dataView = $('[data-ui-role="advanced-table"]').data('view')
+		dataView.setPage(1);
+		dataView.args = view.getFilterValue();
 	 	if (tag_id && post_ids.length > 0) {
 	 		W.getApi().call({
 	            method: 'post',
@@ -286,7 +304,8 @@ $(document).ready(function() {
 	            api: 'tag/batch_update',
 	            args:{ids:post_ids.join('-'), tag_id:tag_id},
 	            success: function(data) {
-	                 window.location.reload();
+	                // window.location.reload();
+	                  dataView.reload();
 	            },
 	            error: function(response) {
 	                W.getErrorHintView().show('加载失败！请刷新页面重试！');
@@ -301,7 +320,9 @@ $(document).ready(function() {
 
 		var $el = $(event.currentTarget);
 		var member_id = $el.attr('data-id');
-
+		var dataView = $('[data-ui-role="advanced-table"]').data('view')
+		dataView.setPage(1);
+		dataView.args = view.getFilterValue();
 		var memberIntegralUpdateView = W.getMemberIntegralUpdateView({
 			width: 310,
 			title: '调积分',
@@ -312,6 +333,7 @@ $(document).ready(function() {
 		memberIntegralUpdateView.show({
 			$action: $el,
 			memberId: member_id,
+			dataView:dataView
 		})
         memberIntegralUpdateView.render();
 
