--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -128,11 +128,34 @@
             var $productList = $('.wui-productlist');
             var $imageDisplay = $('.wui-imagedisplay');
             var $imageNav = $('.wui-imagenav');
+            var $swiperImg = $('.wui-swiper-slide');
+
             var screenWidth = $(this).width()-2;   //获取屏幕宽度，减去2px外边距
-            var defalutWidth = $(this).width()-1;   
+            var defalutWidth = $(this).width()-1;  //默认一大两小宽度
             var averageWidth = screenWidth/3;             
             var width = defalutWidth/3;             
 
+            var $swiperWrapper = $swiperImg.parent('.wui-swiper-wrapper');
+            var $imgs = $swiperWrapper.find('img');
+            var imgsHeightArr = [];
+
+            if( $swiperImg.length >0 ){
+                window.onload=function(){
+                    $imgs.each(function() {
+                        console.log($(this).height()); 
+                        imgsHeightArr.push($(this).height());
+                        
+                    });
+                    var maxHeight = Math.max.apply(Math,imgsHeightArr);
+                    var $swiperSlide = $swiperWrapper.children('.wui-swiper-slide');
+                    $swiperWrapper.parent('.wui-swiper-container').height(maxHeight);
+                    $swiperWrapper.height(maxHeight);
+                    $swiperSlide.css({
+                        height: maxHeight,
+                        lineHeight: maxHeight +'px'
+                    });
+                }
+            }
             if($product.length > 0){
 
                 getWidth('.wui-product');
@@ -160,7 +183,10 @@
             if($imageNav.length > 0){
                 getWidth('.wui-imagenav');
                 var imgNavWidth = $imageNav.find('.wui-inner-pic').eq(0).width();
-                $imageNav.find('li').height(imgNavWidth);
+                var imgTitle = $imageNav.find('.wa-inner-title').text();
+                if ( imgTitle =='' ) {
+                    $imageNav.find('li').height(imgNavWidth);
+                };
 
             }
             function getWidth(component){
@@ -177,7 +203,6 @@
         </script>
         
 
-        <!--<script src="http://192.168.2.76:8080/target/target-script-min.js"></script> -->
         <script type="text/javascript">
             var isHideWeixinOptionMenu = {% if is_hide_weixin_option_menu %}true{% else %}false{% endif %};
 
@@ -199,12 +224,20 @@
             {% endfor %}
             {% endif %}
 
-            W.sharePageTitle = {% if share_page_title %}"{{ share_page_title }}"{% else %}"{{ page_title }}"{% endif %};
+            W.sharePageTitle = {% if page_title %}"{{ page_title }}"{% else %}"{{ share_page_title }}"{% endif %};
             W.sharePageDesc = {% if share_page_desc %}"{{ share_page_desc }}"{% else %}"{{ page_title }}"{% endif %};
-            W.sharePageImg = "{{ request.share_img_url }}";
+                  
+            W.sharePageImg = {% if share_img_url %}"{{ share_img_url }}"{% else %}"{{ request.share_img_url }}"{% endif %};
             if(W.sharePageImg.substr(0,7)!="http://" && W.sharePageImg.substr(0,8)!="https://")
-                W.sharePageImg = "http://"+window.location.host+W.sharePageImg;
-
+                    W.sharePageImg = "http://"+window.location.host+W.sharePageImg;
+            var link = window.location.href;
+            if (link.indexOf('fmt') === -1){
+                if (link.indexOf('&') === -1){
+                    link = link +"?fmt="+W.curRequestMemberToken;
+                } else {
+                    link = link +"&fmt="+W.curRequestMemberToken;
+                }
+            }
             $(document).ready(function() {
                 $('a').highlight();
                 FastClick.attach(document.body);
@@ -225,17 +258,48 @@
                  */
                 W.wxShareData = {
                     "imgUrl" : W.sharePageImg,
-                    "link" : window.location.href,
+                    "link" : link,
                     "desc" : W.sharePageDesc,
                     "title" : W.sharePageTitle,
                     // 点击分享按钮
                     trigger: function (res) {
-                       // alert('用户点击分享按钮'+res);
+                       //alert('用户点击分享按钮'+res);
                     },
                     // 分享成功
                     success : function(res) {
-                       // alert('success'+res);
+                       //alert('success'+res); 增加分享链接api
+                     //  alert('success1')
+                     alert(message)
+                       W.getApi().call({
+                            app: 'webapp',
+                            api: 'project_api/call',
+                            method: 'post',
+                            args: _.extend({
+                                woid: W.webappOwnerId,
+                                project_id: W.projectId,
+                                module: 'user_center',
+                                target_api: 'shared_url/record',
+                                link: link,
+                                title:W.sharePageTitle
+                            }),
+                            success: function(data) {
+                                alert("分享链接成功")
+                            },
+                            error: function(data){
+                                alert("分享链接失败")
+                            }
+                        });
+                      // alert('success2')
                     }
+                    //error : function(res) {
+                    //           alert('error'+res);
+                    //},
+                    //cancel: function (res) {
+                    //     alert('已取消');
+                    //      },
+                    //fail: function (res) {
+                    //    alert(JSON.stringify(res));
+                    //}     
                 };
                 wx.ready(function () {
                   // 1 判断当前版本是否支持指定 JS 接口，支持批量判断
@@ -249,21 +313,26 @@
                       'showOptionMenu',
                     ],
                     success: function (res) {
-                      if(!W.wxShareData)
-                        return
-                      res = res.checkResult;
-                      if(res.onMenuShareAppMessage)
-                        wx.onMenuShareAppMessage(W.wxShareData)
-                      if(res.onMenuShareTimeline)
-                        wx.onMenuShareTimeline(W.wxShareData)
-                      if(res.onMenuShareQQ)
-                        wx.onMenuShareQQ(W.wxShareData)
-                      if(res.previewImage)
-                        W.ImagePreview(wx)
-                      if(res.hideOptionMenu && isHideWeixinOptionMenu)
-                        wx.hideOptionMenu()
-                      if(res.showOptionMenu && !isHideWeixinOptionMenu)
-                        wx.showOptionMenu()
+                    if(isHideWeixinOptionMenu){
+                        wx.hideOptionMenu();
+                    }
+                    if(res.hideOptionMenu && isHideWeixinOptionMenu){
+                       wx.hideOptionMenu();
+                    }
+                    if(!W.wxShareData)
+                    return
+                    res = res.checkResult;
+                    if(res.onMenuShareAppMessage)
+                       wx.onMenuShareAppMessage(W.wxShareData)
+                    if(res.onMenuShareTimeline)
+                       wx.onMenuShareTimeline(W.wxShareData)
+                    if(res.onMenuShareQQ)
+                       wx.onMenuShareQQ(W.wxShareData)
+                    if(res.previewImage)
+                       W.ImagePreview(wx)
+                   
+                    if(res.showOptionMenu && !isHideWeixinOptionMenu)
+                       wx.showOptionMenu()
                     }
                   });
                 });
@@ -276,21 +345,8 @@
                     $("body").alert({
                         isShow: true,
                         info: W.errorMessage,
-                        speed: 3000                
+                        speed: 3000
                     });
-                }
-
-                var isInFrame = (parent !== window);
-                if (isInFrame) {
-                    if (parent.setWebappPageTitle) {
-                        parent.setWebappPageTitle(W.pageTitle);
-                    }
-
-                    //在预览模式下，修改a，禁止点击
-                    $('a').each(function() {
-                        var $link = $(this);
-                        $link.attr('href', 'javascript:void(0);');
-                    })
                 }
             });
             {# 百度统计代码开始 #}
