--- a/weapp/weixin2/templates/weixin/advance_manage/qrcode_member.html
+++ b/weapp/weixin2/templates/weixin/advance_manage/qrcode_member.html
@@ -1,5 +1,25 @@
 {% extends "content_base_v2.html" %}
+{% block css%}
+<style>
+.xa-list [class^="icon-"]{
+	display: inline-block;
+	width: 14px;
+	height: 14px;
+	margin-top: 1px;
+	line-height: 14px;
+	vertical-align: text-top;
+}
+	.xa-list .icon-arrow-up{
+		/*background: #000;*/
+		background: url('/static_v2/img/weixin/storingUp.png') no-repeat ;
+	}
+	.xa-list .icon-arrow-down{
+		/*background: #f00;*/
+		background: url('/static_v2/img/weixin/storing.png') no-repeat;
 
+	}
+</style>
+{% endblock%}
 {% block content-panel %}
 <div class="xui-memberListPage">
 
@@ -49,7 +69,7 @@
 
     </div>
     </div>
-	<div class="panel panel-default xb-rightPanel pr mt20">
+	<div class="panel panel-default xb-rightPanel pr mt20 xa-list">
 		<div class="panel-heading">
 			<!-- <a class="xui-tipBox fr">
 			如何对数据排序<b class="xui-tip">?</b></a> -->
@@ -81,7 +101,9 @@
 		<thead>
 		<tr>
 			<th >粉丝</th>
-			<th  class="tx_sortable" style="width:15%" data-sort-attr='integral' >积分</th>
+			<th class="tx_sortable" style="width:15%;text-align:center;" data-sort-attr='pay_times'><a>购买次数</a></th>
+			<th class="tx_sortable" style="width:15%" data-sort-attr='integral' ><a>积分</a></th>
+			<th class="tx_sortable" style="width:15%" data-sort-attr='pay_money'><a>消费总额</a></th>
 			<th style="width:20%">会员等级</th>
 			<th  class="tx_sortable " style="width:20%" data-sort-attr='created_at' data-init-sort="-created_at" >关注时间</th>
 		</tr>
@@ -110,8 +132,14 @@
 					</a>
 				</div>
 			</td>
+			<td style="text-align:center">
+				<div class="centerAlign">${ member.pay_times }</div>
+			</td>
 			<td>
 				<div class="centerAlign">${ member.integral }</div>
+			</td>
+			<td>
+				<div class="centerAlign">${ member.pay_money }</div>
 			</td>
 			<td>
 				<div class="centerAlign">${ member.grade_name }</div>
