--- a/weapp/templates/webapp_content_base.html
+++ b/weapp/templates/webapp_content_base.html
@@ -213,6 +213,7 @@
                 };
 
                 if (window.location.href.indexOf('share_red_envelope') > 0){
+                    alert(window.location.href);
                     W.wxShareTimelineData = {
                         "imgUrl" : W.sharePageImg,
                         "link" : window.location.href,
@@ -246,6 +247,7 @@
                         }
                     };
                 }else{
+                    alert("hhahhahah");
                     W.wxShareTimelineData = W.wxShareData;
                 }
 
@@ -303,7 +305,7 @@
             (function() {
             var hm = document.createElement("script");
             hm.src = "//hm.baidu.com/hm.js?ee18872310bbb14797f87c9eda185a85";
-            var s = document.getElementsByTagName("script")[0]; 
+            var s = document.getElementsByTagName("script")[0];
             s.parentNode.insertBefore(hm, s);
             })();
             {# 百度统计代码结束 #}
