--- a/weapp/templates/webapp_content_base.html
+++ b/weapp/templates/webapp_content_base.html
@@ -214,6 +214,7 @@
 
                 if (window.location.href.indexOf('share_red_envelope') > 0){
                     alert(window.location.href);
+                    alert(W.sharePageDesc);
                     W.wxShareTimelineData = {
                         "imgUrl" : W.sharePageImg,
                         "link" : window.location.href,
