更换分享到朋友圈描述
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@16831 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/templates/webapp_content_base.html
+++ b/weapp/templates/webapp_content_base.html
@@ -236,7 +236,7 @@
                                     module: 'user_center',
                                     target_api: 'shared_url/record',
                                     link: window.location.href,
-                                    title:W.sharePageTitle
+                                    title: W.sharePageDesc
                                 }),
                                 success: function(data) {
                                     alert("分享链接成功")
