[bug] *webapp page
git-svn-id: http://s11/svn/weapp/web/trunk_2.0@16840 152f85a6-bef7-4f42-898c-89626e871b9b

--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -168,7 +168,7 @@
             }
             if($imageDisplay.length > 0){
                 $imageDisplay.find('.wui-grid-b li').width(averageWidth);
-                $imageDisplay.find('.wui-grid-e li').width(width);
+                $imageDisplay.find('.wui-grid-b li').height(averageWidth);
                 $imageDisplay.each(function() {
                     var $imgGroup = $(this).find('.wui-grid-e');
                     console.log($imgGroup,55555)
