--- a/weapp/static_v2/css/base.css
+++ b/weapp/static_v2/css/base.css
@@ -35,6 +35,7 @@ textarea{resize:none}
 .f14{font-size:14px;}
 .f16{font-size:16px;}
 .f20{font-size:20px;}
+.f22{font-size:22px;}
 .fb{font-weight:bold;}
 .fn{font-weight:normal;}
 .t2{text-indent:2em;}
